# tangnano9k-chisel-sample

./: .gitignore  CMakeLists.txt  README.md  build.sbt
cmake/: FindGWIN.cmake
cmake/tcl/: run.tcl
gwin/: CMakeLists.txt
gwin/uart_tx/: CMakeLists.txt
gwin/uart_tx/src/: uart_tx.cst  uart_tx.sdc
src/main/scala/nds/: top.scala
src/main/scala/nds/uart/: uart.scala  uart_top_design.scala
src/main/scala/nds/util/: util.scala
src/test/scala/nds/uart/: uart_test.scala
